AEDSII/tt1_ArthurMoraes/u00f/README.TXT
NAo entendi a classe arq, ela é da linguagem ou foi so um exemplo? 
Nao consigo compilar os exemplos, da erro do arq

Arq01.java:4: error: cannot find symbol
Arq.openWrite("exemplo.txt");
^
  symbol:   variable Arq
  location: class ExemploArqO1Escrita
Arq01.java:5: error: cannot find symbol
Arq.println(1);
^
  symbol:   variable Arq
  location: class ExemploArqO1Escrita
Arq01.java:6: error: cannot find symbol
Arq.println(5.3);
^
  symbol:   variable Arq
  location: class ExemploArqO1Escrita
Arq01.java:7: error: cannot find symbol
Arq.println('X');
^
  symbol:   variable Arq
  location: class ExemploArqO1Escrita
Arq01.java:8: error: cannot find symbol
Arq.println(true);
^
  symbol:   variable Arq
  location: class ExemploArqO1Escrita
Arq01.java:9: error: cannot find symbol
Arq.println("Algoritmos");
^
  symbol:   variable Arq
  location: class ExemploArqO1Escrita
Arq01.java:10: error: cannot find symbol
Arq.close();
^
  symbol:   variable Arq
  location: class ExemploArqO1Escrita
7 errors